# customercare_agent

./: README.md  agent.py  agent_graph.py  database.py  docker-compose.yml  langgraph.json  main.py  nodes.py  pgpass  pyproject.toml  servers.json  sql_agent_service.py  state.py  testing.py  ticket_repository.py  utils.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
api/: main.py  schemas.py
customercaredb/: init.sql
