[project]
name = "customercare-agent"
version = "0.1.0"
description = "description = "Agentic AI customer care system that classifies complaints, queries a support database via a LangChain SQL agent, and creates tickets through a LangGraph workflow with human-in-the-loop escalation, exposed over a FastAPI HTTP API.""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.0",
    "google-genai>=1.75.0",
    "langchain>=1.2.18",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langgraph>=1.1.10",
    "langgraph-cli[inmem]>=0.4.25",
    "langsmith>=0.8.3",
    "psycopg-binary>=3.3.4",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.49.0",
]
